tdf#105415 Use the system caret width on GTK

Change-Id: I6b7fc9d06a49613cc6fe247b44c56f36935082fa